<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Car Api</string>
    <string name="menu_search">Search</string>
    <string name="choose_car_tv">Wybierz model swojego samochodu</string>
    <string name="choose_your_car_make">Wybierz markę swojego samochodu</string>
    <string name="model">Model</string>
    <string name="year">Year</string>
    <string name="type">Type</string>
    <string name="make">Make</string>
    <string name="no_account_tv">Nie masz konta? Zarejestruj się</string>
    <string name="login_btn">Zaloguj się</string>
    <string name="password_hint">Hasło</string>
    <string name="continue_login_tv">Zaloguj się,\nby kontynuować</string>
    <string name="email_hint">Email</string>
    <string name="forgot_password_tv">Zapomniałeś hasła?</string>
    <string name="register_btn">Zarejestruj</string>
    <string name="name_hint">Nazwa</string>
    <string name="register_tv">Stwórz konto</string>
    <string name="have_account_tv">Masz już konto? Kliknij, aby się zalogować</string>
    <string name="back_to_login">Kliknij, aby wrócic do logowania</string>
    <string name="reset_password_btn">Zresetuj hasło</string>
    <string name="forgot_password_head_tv">Zapomniałeś hasła? \nUżyj e-maila do resetowania</string>
    <string name="dashboard_head_tv">My Dashboard</string>
    <string name="car_logo_content_description">car logo</string>
    <string name="create_order_tv">Stwórz zamówienie</string>
    <string name="dimensions_tv">Wymiary</string>
    <string name="calendar_tv">Kalendarz</string>
    <string name="calculator_tv">Kalkulator do folii</string>
    <string name="old_price_tv"><strike>Old Price</strike></string>
    <string name="new_price_tv">New Price</string>
    <string name="item_title_tv">Item Title</string>
    <string name="discount_tv">-%d%%</string>
    <string name="create_iv">Create order icon</string>
    <string name="dimension_iv">Dimension icon</string>
    <string name="calculator_iv">Calculator icon</string>
    <string name="calendar_iv">Calculator icon</string>
    <string name="project_iv">Project icon</string>
    <string name="about_us_iv">About us icon</string>
    <string name="projects_tv">Projekty</string>
    <string name="about_us_tv">O nas</string>
    <string name="banner_iv">Banner image</string>
    <string name="email_tv">phillipekcoutinho@gmail.com</string>
    <string name="email_iv">Email icon</string>
    <string name="phone_tv">111111111</string>
    <string name="phone_iv">Phone icon</string>
    <string name="contact_tv">Kontakt</string>
    <string name="contact_iv">Contact icon</string>
    <string name="about_description_tv">Zajmujemy się profesjonalną zmianą koloru samochodów i usługami detailingowymi. Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum Lorem ipsum. Zapraszamy do kontaktu</string>
    <string name="message_iv">Message icon</string>
    <string name="about_us_head_tv">O nas</string>
    <string name="show_map_btn">Pokaż mapę</string>
    <string name="address_tv">Polanka 3, 60–995 Poznań</string>
    <string name="address_head_tv" tools:ignore="Typos">Adres</string>
    <string name="marker_iv">Marker icon</string>
    <string name="about_head_tv">Foliarz</string>
    <string name="car_logo_iv">Car logo icon</string>
    <string name="dashboard_menu_item">Panel główny</string>
    <string name="create_order_menu_item">Zamów</string>
    <string name="profile_menu_item">Profil</string>
    <string name="profile_iv">Profile image</string>
    <string name="profile_email_tv">Email@gmail.com</string>
    <string name="profile_name_tv">PROFILE NAME</string>
    <string name="add_car_btn" tools:ignore="Typos">Dodaj nowe auto</string>
    <string name="car_iv">Car icon</string>
    <string name="your_cars_tv">Twoje samochody</string>
    <string name="logout_tv">Wyloguj się</string>
    <string name="car_delete_iv">Delete car</string>
    <string name="no_cars_tv">Brak samochodów na twojej liście!</string>
    <string name="add_project_fab">Add project</string>
    <string name="description_text">Description text</string>
    <string name="title_tv">Title text</string>
    <string name="project_image">Project image</string>
    <string name="project_title_et_hint">Tytuł projektu</string>
    <string name="project_description_et">Opis projektu</string>
    <string name="add_photo_btn">Dodaj zdjęcie</string>
    <string name="dimension_et_hint">Pomiar</string>
    <string name="car_side_instruction_tv">Zmierz odległość między najbardziej skrajnymi punktami przedniego i tylnego błotnika</string>
    <string name="car_side_tv">Bok auta</string>
    <string name="calculator_head_tv">Wymierz swój \n samochód</string>
    <string name="unit_tv">cm</string>
    <string name="bonnet_tv">Maska</string>
    <string name="back_tv">Bagażnik</string>
    <string name="bumper_tv">Zderzaki</string>
    <string name="bumper_instruction_tv">Zmierz szerokość dla obu zderzaków, wprowadź wartość dla szerszego wyniku pomiaru</string>
    <string name="back_instruction_tv">Zmierz odległość w najszerszym punkcie klapy bagażnika</string>
    <string name="bonnet_instruction_tv">Zmierz odległość w najszerszym i i najwyższym punkcie maski</string>
    <string name="width_hint">Szerokość</string>
    <string name="height_hint">Wysokość</string>
    <string name="roof_tv">Dach</string>
    <string name="roof_instruction_tv">Zmierz odległość w najszerszym i najdłuższym punkcie dachu</string>
    <string name="confrim_dimension_btn">Zatwierdź wymiar</string>
    <string name="result_tv">%.2f m.b.</string>
    <string name="calculator_choose_car_tv">Wybierz model samochodu ze swojej listy</string>
    <string name="calculator_no_cars_tbv">Brak samochodów na Twojej liście. Kliknij aby przejść do profilu</string>
    <string name="need_tv">Potrzebujesz:</string>
    <string name="car_make_calculator_tv">Marka samochodu:</string>
    <string name="car_model_calculator_tv">Model samochodu:</string>
    <string name="car_year_calculator_v">Rocznik:</string>
    <string name="car_type_calculator_tv">Typ nadwozia:</string>
    <string name="need_summary_tv">Zapotrzebowanie:</string>
    <string name="disclaimer_tv">* Zapisując wynik, dodajesz go do wspólnej bazy dla wszystkich użytkowników, inni będą mogli sugerować się Twoim pomiarem w przyszłości</string>
    <string name="save_btn_text">Zapisz</string>
    <string name="dismiss_btn_text">Odrzuć</string>
    <string name="dimensions_head_tv">Samochody wymierzone\nprzez użytkowników</string>
    <string name="foil_hint_iv">Foil hint image</string>
    <string name="by_tv">przez %s</string>
    <string name="dimensions_need_tv">Zapotrzebowanie</string>
    <string name="measure_hint_content">Measure hint image</string>
    <string name="no_network_tv">Brak połączenia z siecią</string>
    <string name="no_network_iv">No internet Image</string>
    <string name="no_results_tv">Brak wyników</string>
    <string name="connect_network_tv">Połącz z internetem, by wyświetlić promocje</string>
    <string name="month_year_tv">Grudzień 2021</string>
    <string name="next_month_btn"><![CDATA[->]]></string>
    <string name="previous_month_btn"><![CDATA[<-]]></string>
    <string name="sunday_tv">NDZ</string>
    <string name="monday_tv">PON</string>
    <string name="tuesday_tv">WT</string>
    <string name="wednesday_tv">ŚR</string>
    <string name="thursday_tv">CZW</string>
    <string name="friday_tv">PT</string>
    <string name="saturday_tv">SOB</string>
    <string name="add_event_btn">Dodaj termin</string>
    <string name="save_btn">ZAPISZ</string>
    <string name="delete_btn">Usuń termin</string>
    <string name="calendar_cell_tv">5</string>
    <string name="name_surname_et_hint">Wpisz dane…</string>
    <string name="name_surname_tv">Imię i nazwisko</string>
    <string name="variant_ready_color">Korzystam z gotowego koloru (w uwagach podać numer koloru)</string>
    <string name="variant_own_foil">Mam swoją folię</string>
    <string name="variant_own_project_foil">Mam projekt folii</string>
    <string name="foil_variants_tv">Wariant folii</string>
    <string name="phone_number_tv">Numer telefonu</string>
    <string name="remarks_et_hint">Uwagi i dodatkowe informacje…</string>
    <string name="choose_your_car_tv">Wybierz swój samochód</string>
    <string name="submit_btn">Zatwierdź</string>
    <string name="order_no_cars_tv">Brak samochodów na twojej liście, przejdź do profilu by dodać</string>
    <string name="chosen_car_tv">Wybrane auto:</string>
    <string name="ordered_by_tv">Zamówil:\n%1$s</string>
    <string name="order_phone_number_tv">Telefon: \n%1$s</string>
    <string name="order_foil_variant_tv">Wariant folii:\n%1$s</string>
    <string name="order_email_tv">Email: \n%1$s</string>
    <string name="order_remarks_tv">Uwagi: \n%1$s</string>
    <string name="no_orders_tv">Brak zamówień</string>
    <string name="admin_no_orders_tv">Brak zamówień złożonych przez użytkowników</string>
    <string name="scroll_up_content_description">scroll up</string>
    <string name="order_list_fab_content_description">Order List</string>
    <string name="your_orders_tv">Twoje zamówienia</string>
    <string name="make_model_summary_tv">%1$s %2$s</string>
</resources>