<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/secondary"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginVertical="12dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/previous_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/secondary"
                android:elevation="20dp"
                android:text="@string/previous_month_btn"
                android:textColor="@color/primary"
                android:textSize="30sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/month_year_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="2"
                android:fontFamily="@font/tommy_bold"
                android:text="@string/month_year_tv"
                android:textAlignment="center"
                android:textColor="@color/primary"
                android:textSize="20sp" />

            <Button
                android:id="@+id/next_btn"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/secondary"
                android:text="@string/next_month_btn"
                android:textColor="@color/primary"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/lemon"
                android:text="@string/sunday_tv"
                android:textAlignment="center"
                android:textColor="@color/primary"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/lemon"
                android:text="@string/monday_tv"
                android:textAlignment="center"
                android:textColor="@color/primary"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/lemon"
                android:text="@string/tuesday_tv"
                android:textAlignment="center"
                android:textColor="@color/primary"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/lemon"
                android:text="@string/wednesday_tv"
                android:textAlignment="center"
                android:textColor="@color/primary"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/lemon"
                android:text="@string/thursday_tv"
                android:textAlignment="center"
                android:textColor="@color/primary"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/lemon"
                android:text="@string/friday_tv"
                android:textAlignment="center"
                android:textColor="@color/primary"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:fontFamily="@font/lemon"
                android:text="@string/saturday_tv"
                android:textAlignment="center"
                android:textColor="@color/primary"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/calendar_rv"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginVertical="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/box_orange_radius"
                    android:foreground="?android:selectableItemBackground"
                    android:padding="8dp"
                    android:text="@string/add_event_btn"
                    android:textColor="@color/secondary"
                    android:textSize="20sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginVertical="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/box_orange_radius"
                    android:foreground="?android:selectableItemBackground"
                    android:padding="8dp"
                    android:text="@string/delete_btn"
                    android:textColor="@color/secondary"
                    android:textSize="20sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="12dp"
                    android:layout_marginVertical="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/box_orange_radius"
                    android:foreground="?android:selectableItemBackground"
                    android:padding="8dp"
                    android:text="@string/save_btn"
                    android:textColor="@color/secondary"
                    android:textSize="20sp"
                    android:visibility="gone" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</layout>