<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/secondary"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top|center"
            android:layout_margin="10dp"
            tools:ignore="UseCompoundDrawables">

            <ImageView
                android:id="@+id/car_logo_iv"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="12dp"
                android:contentDescription="@string/car_logo_iv"
                android:src="@drawable/orange_car"
                app:tint="@color/primary" />

            <TextView
                android:id="@+id/about_head_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="12dp"
                android:textAlignment="center"
                android:layout_toEndOf="@id/car_logo_iv"
                android:fontFamily="@font/lemon"
                android:text="@string/about_head_tv"
                android:textColor="@color/primary"
                android:textSize="40sp" />
        </RelativeLayout>


        <LinearLayout
            android:id="@+id/address_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="12dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/box_about_us_animation"
            android:orientation="vertical"
            android:paddingHorizontal="30dp"
            android:paddingVertical="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_toStartOf="@id/marker_iv"
                    android:fontFamily="@font/lemon"
                    android:text="@string/address_head_tv"
                    android:textColor="@color/primary"
                    android:textSize="25sp"
                    tools:ignore="RelativeOverlap" />

                <ImageView
                    android:id="@+id/marker_iv"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="50dp"
                    android:clickable="true"
                    android:contentDescription="@string/marker_iv"
                    android:focusable="true"
                    android:src="@drawable/ic_marker"
                    app:tint="@color/primary" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/address_tv"
                    android:textColor="@color/primary_light"
                    android:textSize="18sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/show_map_btn"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/box_orange_radius"
                    android:clickable="true"
                    android:focusable="true"
                    android:fontFamily="@font/lemon"
                    android:foreground="?android:selectableItemBackground"
                    android:text="@string/show_map_btn"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    tools:ignore="UnusedAttribute" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/contact_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_marginStart="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="12dp"
            android:background="@drawable/box_about_us_animation"
            android:orientation="vertical"
            android:paddingHorizontal="30dp"
            android:paddingVertical="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:fontFamily="@font/lemon"
                    android:text="@string/contact_tv"
                    android:textColor="@color/primary"
                    android:layout_toStartOf="@+id/contact_iv"
                    android:textSize="25sp"
                     />

                <ImageView
                    android:id="@+id/contact_iv"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="30dp"
                    android:clickable="true"
                    android:contentDescription="@string/contact_iv"
                    android:focusable="true"
                    android:src="@drawable/ic_contact"
                    app:tint="@color/primary" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/phone_iv"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:clickable="true"
                    android:contentDescription="@string/phone_iv"
                    android:focusable="true"
                    android:src="@drawable/ic_phone"
                    app:tint="@color/primary" />

                <TextView
                    android:id="@+id/phone_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="8dp"
                    android:text="@string/phone_tv"
                    android:textAlignment="center"
                    android:textColor="@color/primary_light"
                    android:textSize="17sp"

                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal"
                tools:ignore="UseCompoundDrawables">

                <ImageView
                    android:id="@+id/email_iv"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:contentDescription="@string/email_iv"
                    android:src="@drawable/ic_email"
                    app:tint="@color/primary" />

                <TextView
                    android:id="@+id/email_tv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginHorizontal="8dp"
                    android:clickable="true"
                    android:focusable="true"
                    android:text="@string/email_tv"
                    android:textAlignment="center"
                    android:textColor="@color/primary_light"
                    android:textSize="16sp" />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/about_us_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/box_about_us_animation"
            android:orientation="vertical"
            android:paddingHorizontal="30dp"
            android:paddingVertical="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/lemon"
                    android:text="@string/about_us_head_tv"
                    android:textColor="@color/primary"
                    android:textSize="25sp"
                    android:layout_toStartOf="@id/message_iv"
                     />

                <ImageView
                    android:id="@+id/message_iv"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_alignParentEnd="true"
                    android:clickable="true"
                    android:contentDescription="@string/message_iv"
                    android:focusable="true"
                    android:src="@drawable/ic_message"
                    app:tint="@color/primary" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/about_description_tv"
                android:textAlignment="center"
                android:textColor="@color/primary_light"
                android:textSize="16sp" />


        </LinearLayout>

    </LinearLayout>

</layout>






