<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <ImageView
            android:id="@+id/item_img"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@mipmap/ic_launcher_round"
             />

        <TextView
            android:id="@+id/item_title_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/item_title_tv"
            android:textSize="20sp"
             />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

        <TextView
            android:id="@+id/new_price_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_price_tv"
            android:textSize="15sp"
            android:layout_margin="8dp"

            />

        <TextView
            android:id="@+id/old_price_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/old_price_tv"
            android:textSize="15sp"
            android:layout_margin="8dp"
            />

        </LinearLayout>


    </LinearLayout>
</layout>