<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="clickListener"
            type="com.example.carapi.adapter.CarProfileClickListener" />

        <variable
            name="car"
            type="com.example.carapi.models.Car" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:layout_marginTop="12dp"
        android:elevation="20dp"
        app:cardCornerRadius="40dp">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/box_orange_radius"
            android:padding="12dp">

            <ImageView
                android:id="@+id/delete_btn"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_marginHorizontal="6dp"
                android:layout_marginVertical="6dp"
                android:onClick="@{()-> clickListener.onClick(car)}"
                android:src="@drawable/ic_delete"
                app:layout_constraintBottom_toBottomOf="@+id/model_tv"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/model_tv"
                app:layout_constraintTop_toTopOf="@+id/model_tv"
                android:contentDescription="@string/car_delete_iv" />


            <ImageView
                android:id="@+id/car_iv"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:contentDescription="@string/car_iv"
                android:src="@drawable/ic_car_profile"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/secondary" />

            <TextView
                android:id="@+id/make_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:fontFamily="@font/tommy_bold"
                android:text="@string/make"
                android:textColor="@color/secondary"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@id/car_iv"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/model_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:fontFamily="@font/tommy_bold"
                android:text="@string/model"
                android:textAlignment="center"
                android:textColor="@color/secondary"
                android:textSize="20sp"
                app:layout_constraintStart_toEndOf="@id/make_tv"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/year_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/year"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/car_iv"
                app:layout_constraintTop_toBottomOf="@id/model_tv" />

            <TextView
                android:id="@+id/type_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="12dp"
                android:text="@string/type"
                android:textAlignment="center"
                android:textSize="15sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/year_tv"
                app:layout_constraintTop_toBottomOf="@id/model_tv" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.card.MaterialCardView>
</layout>